fix text overflow in reviews

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -269,7 +269,7 @@ button:focus {
 .review-wrapper {
   margin: 100px auto;
   padding: 55px 140px 47px;
-  height: 580px;
+  height: 590px;
   flex-direction: column;
   align-items: center;
   color: black;
@@ -309,9 +309,10 @@ button:focus {
 }
 
 .review-text {
-  padding: 25px 0;
-  height: 220px;
+  padding: 20px 0;
+  height: 231px;
   border-bottom: 1px solid rgba(153, 152, 152, 0.4);
+  overflow: auto;
 }
 
 .form-wrapper {
